style: tweak metadata

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "a24.repair",
+    "name": "a24",
     "version": "0.1.0",
-    "description": "A Anytime Anywhere 24 Hour Mobile Truck Repair",
+    "description": "A Anytime Anywhere 24 Hour Mobile Truck & Trailer Repair",
     "keywords": [],
     "homepage": "https://github.com/anytime24hour/a24#readme",
     "bugs": {
