add gmap loader & update dependencies

--- a/package.json
+++ b/package.json
@@ -52,30 +52,31 @@
         ]
     },
     "dependencies": {
-        "uikit": "^3.1.9"
+        "load-google-maps-api": "^2.0.1",
+        "uikit": "^3.2.1"
     },
     "devDependencies": {
-        "@babel/cli": "^7.5.5",
-        "@babel/core": "^7.5.5",
+        "@babel/cli": "^7.6.2",
+        "@babel/core": "^7.6.2",
         "@babel/preset-flow": "^7.0.0",
         "@girder/pug-lint-config": "^3.0.2",
-        "@prettier/plugin-pug": "^1.0.1",
+        "@prettier/plugin-pug": "^1.0.3",
         "autoprefixer": "^9.6.1",
         "babel-eslint": "^10.0.3",
         "babel-plugin-inline-dotenv": "^1.5.0",
-        "eslint": "^6.3.0",
+        "eslint": "^6.5.1",
         "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-config-prettier": "^6.1.0",
+        "eslint-config-prettier": "^6.3.0",
         "eslint-plugin-babel": "^5.3.0",
-        "eslint-plugin-flowtype": "^4.2.0",
+        "eslint-plugin-flowtype": "^4.3.0",
         "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-prettier": "^3.1.0",
+        "eslint-plugin-prettier": "^3.1.1",
         "flow-bin": "^0.106.3",
         "glob-exec": "^0.1.1",
-        "husky": "^3.0.5",
-        "lint-staged": "^9.2.5",
+        "husky": "^3.0.8",
+        "lint-staged": "^9.4.1",
         "npm-run-all": "^4.1.5",
-        "pa11y": "^5.2.0",
+        "pa11y": "^5.3.0",
         "parcel-bundler": "^1.12.3",
         "parcel-plugin-browserconfig": "^1.0.3",
         "parcel-plugin-static-files-copy": "^2.2.1",
@@ -84,11 +85,11 @@
         "pug": "^2.0.4",
         "pug-lint": "^2.6.0",
         "rimraf": "^3.0.0",
-        "sass": "^1.22.10",
+        "sass": "^1.23.0",
         "stylelint": "^10.1.0",
         "stylelint-a11y": "^1.2.1",
-        "stylelint-config-prettier": "^5.2.0",
-        "stylelint-config-sass-guidelines": "^6.0.0",
+        "stylelint-config-prettier": "^5.3.0",
+        "stylelint-config-sass-guidelines": "^6.1.0",
         "stylelint-prettier": "^1.1.1"
     }
 }
